# strong_type

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  appveyor.yml
.circleci/: config.yml
sources/: CMakeLists.txt
sources/include/strong_type/: strong_type.h
tests/: CMakeLists.txt
tests/src/: strong_tests.cpp
